testdata/baselines/reference/submodule/conformance/nodeModulesJson.errors.txt
/loosey.cts(1,36): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/loosey.cts(6,9): error TS2339: Property 'default' does not exist on type '{ version: number; }'.
/main.mts(5,36): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/main.mts(6,52): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/main.mts(8,41): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/main.mts(9,42): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/main.mts(11,9): error TS2339: Property 'default' does not exist on type '{ version: number; }'.


==== /node_modules/not.json/package.json (0 errors) ====
    {
      "name": "not.json",
      "version": "1.0.0",
      "type": "module",
      "exports": "./index.js"
    }
    
==== /node_modules/not.json/index.d.ts (0 errors) ====
    export function oops(json: string): any;
    
==== /node_modules/actually-json/package.json (0 errors) ====
    {
      "name": "actually-json",
      "version": "1.0.0",
      "type": "module",
      "exports": {
        ".": "./index.json",
        "./typed": "./typed.d.json.ts"
      }
    }
    
==== /node_modules/actually-json/index.json (0 errors) ====
    {}
    
==== /node_modules/actually-json/typed.d.json.ts (0 errors) ====
    declare const _default: {};
    export default _default;
    
==== /config.json (0 errors) ====
    {
      "version": 1
    }
    
==== /main.mts (5 errors) ====
    import { oops } from "not.json"; // Ok
    import moreOops from "actually-json"; // Error
    import typed from "actually-json/typed"; // Error
    
    import config from "./config.json" with { type: "json" }; // Ok
                                       ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    import { default as config1 } from "./config.json" with { type: "json" }; // Ok
                                                       ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    import config2 from "./config.json"; // Error, no attribute
    import { version } from "./config.json" with { type: "json" }; // Error, named import
                                            ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    import * as config3 from "./config.json" with { type: "json" };
                                             ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    config3.version; // Error
    config3.default; // Ok
            ~~~~~~~
!!! error TS2339: Property 'default' does not exist on type '{ version: number; }'.
    
==== /loosey.cts (2 errors) ====
    import config from "./config.json" with { type: "json" }; // Error
                                       ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    import config2 from "./config.json"; // Ok
    import { version } from "./config.json"; // Ok
    import * as config3 from "./config.json";
    config3.version; // Ok
    config3.default; // Error
            ~~~~~~~
!!! error TS2339: Property 'default' does not exist on type '{ version: number; }'.
    